[cdap-473] firefox fix for controls group

--- a/cdap-web-app/client/assets/css/new/main.css
+++ b/cdap-web-app/client/assets/css/new/main.css
@@ -1966,9 +1966,11 @@ a strong {
     background: transparent;
     border: 0;
     width: 35px;
+    height: 28px;
 }
 
 .start-stop-wrapper.panel-controls .btn-stop {
+    float: left;
     background: white;
 }
 
