Update visualization of Spark job metrics

--- a/cdap-web-app/client/assets/css/new/main.css
+++ b/cdap-web-app/client/assets/css/new/main.css
@@ -3058,7 +3058,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     text-align: center;
 }
 
-.batch-item, .spark-metrics-item {
+.batch-item {
     max-width: 200px;
     float: left;
     margin: 30px 60px;
@@ -3081,14 +3081,14 @@ only screen and (min-device-pixel-ratio: 1.5) {
     background-size: 100%;
 }
 
-.batch-map, .spark-metrics-block {
+.batch-map {
     border: 4px solid #396DC7;
     background-color: #396DC7;
     background-size: 100%;
     color: #fff;
 }
 
-.batch-reduce, .spark-metrics-scheduler {
+.batch-reduce {
     border: 4px solid #396DC7;
     background-color: #FFF;
     background-size: 100%;
@@ -3142,11 +3142,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin-top: 12px;
 }
 
-.batch-map>.info-window, .spark-metrics-block>.info-window {
+.batch-map>.info-window {
     margin-top: 12px;
 }
 
-.batch-reduce>.info-window, .spark-metrics-scheduler>.info-window {
+.batch-reduce>.info-window {
     margin-top: 12px;
     color: #396DC7;
 }
@@ -3156,7 +3156,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     color: #396DC7;
 }
 
-.info-window .batch-phase, .info-window .metrics-phase {
+.info-window .batch-phase {
     margin-bottom: 8px;
     word-wrap: break-word;
     white-space: normal;
@@ -4368,14 +4368,124 @@ div.tooltip-inner {
 #panels .panel .sparks-metrics{
     margin: 0 auto;
     padding: 32px 0;
-    width: 700px;
-}
-
-.sparks-metrics .spark-icon{
-    width: 220px;
-    height: 160px;
+    width: 900px;
+    line-height: 14px;
 }
 
 .sparks-metrics .metric-row{
-    margin-bottom: 5px;
+    margin: 0 25px 18px;
+}
+
+.sparks-metrics .title-storage{
+    text-align: center;
+    font-size: 18px;
+    margin: 21px 0 36px 0;
+}
+
+.sparks-metrics .title-stage{
+    text-align: center;
+    font-size: 18px;
+    margin: 21px 0 65px 0;
+}
+
+.sparks-metrics .spark-metrics-storage, .sparks-metrics .spark-metrics-stages {
+    border: 4px solid #3C4355;
+    background-color: #3C4355;
+    background-size: 100%;
+    color: #fff;
+    border-radius: 5px;
+    height: 210px;
+}
+
+.sparks-metrics .spark-metrics-storage {
+    width: 260px;
+    float: left;
+    margin-right: 75px;
+}
+
+.sparks-metrics .spark-metrics-stages {
+    width: 530px;
+    float: left;
+}
+
+.spark-metrics-stages .stage-status-line {
+    height: 40px;
+    margin: 0 40px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.spark-metrics-stages .running, .spark-metrics-stages .failed, .spark-metrics-stages .waiting {
+    float: left;
+    height: 100%;
+    padding-top: 13px;
+}
+
+.spark-metrics-stages .running {
+    background:  #16AB16;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 10%;
+}
+
+.spark-metrics-stages .failed {
+    background:  #D14830;
+}
+
+.spark-metrics-stages .waiting {
+    background:  #3CA9D8;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.spark-metrics-stages .bubble-running, .spark-metrics-stages .bubble-failed, .spark-metrics-stages .bubble-waiting {
+    border-color: #787D87 transparent;
+    border-style: solid;
+    width: 15px;
+    position: relative;
+    margin: 0;
+    display: inline-block;
+}
+
+.spark-metrics-stages .bubble-running:after, .spark-metrics-stages .bubble-failed:after,
+.spark-metrics-stages .bubble-waiting:after {
+    background:  #787D87;
+    position: relative;
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 14px;
+    padding: 8px 10px;
+}
+
+.spark-metrics-stages .bubble-running:after {
+    content: "Running";
+    left: -39px;
+    top: -43px;
+}
+
+.spark-metrics-stages .bubble-failed:after {
+    content: "Failed";
+    top: 43px;
+    left: -31px;
+}
+
+.spark-metrics-stages .bubble-waiting:after {
+    content: "Waiting";
+    left: -38px;
+    top: -43px;
+}
+
+.spark-metrics-stages .bubble-running {
+    border-width: 13px 7px 0;
+    top: -43px;
+}
+
+.spark-metrics-stages .bubble-failed {
+    border-width: 0 7px 13px;
+    top: -13px;
+}
+
+.spark-metrics-stages .bubble-waiting {
+    border-width: 13px 7px 0;
+    top: -43px;
 }
