Structures App -> states {status, schedules, history, metadata}

--- a/app/features/applications/applications.less
+++ b/app/features/applications/applications.less
@@ -12,7 +12,7 @@
     thead {
       th {
         padding: 15px 5px;
-        background-color: #D1DADD;
+        //background-color: #D1DADD;
         text-align: center;
       }
     }
