--- a/app/features/applications/templates/status.html
+++ b/app/features/applications/templates/status.html
@@ -1,3 +1,4 @@
-<app class="status">
-  <h3> App -> Status View </h3>
-</app>
+<div class="status">
+  <h1> App -> Status View </h1>
+  <h3 ng-bind="app.name">  </h3>
+</div>
