dashboard beginnings + global theming

--- a/app/styles/themes/default.less
+++ b/app/styles/themes/default.less
@@ -3,6 +3,11 @@
 
 body.theme-default {
 
+  footer {
+    border-top: 1px dashed white;
+    background-color: lighten(@body-bg, 2%);
+  }
+
   //
   // Buttons
   // --------------------------------------------------
