--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -1,12 +1,13 @@
 @import "../../bower_components/bootstrap/less/variables.less";
 
+// overrides from above
 @brand-primary:         #428bca;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
-@body-bg:               #fff;
+@body-bg:               rgb(235, 236, 241);
 
 @text-color:            @gray-dark;
 @link-color:            @brand-primary;
@@ -17,3 +18,7 @@
 @font-family-sans-serif:  Gotham, Helvetica, Arial, sans-serif;
 @font-size-base:          12px;
 @headings-font-weight:    bold;
+
+
+// new variables for use in themes
+@cdap-orange:           rgb(255, 102, 0);
