--- a/app/styles/themes/default.less
+++ b/app/styles/themes/default.less
@@ -2,6 +2,7 @@
 @import "../../../bower_components/bootstrap/less/mixins.less";
 
 body.theme-default {
+  visibility: visible;
 
   footer {
     border-top: 1px dashed white;
