--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -13,7 +13,7 @@
 @link-color:            @brand-primary;
 @link-hover-color:      darken(@link-color, 15%);
 
-@img-path:              "../img/";
+@img-path:              "../img";
 
 @font-family-sans-serif:  Gotham, Helvetica, Arial, sans-serif;
 @font-size-base:          12px;
@@ -22,3 +22,5 @@
 
 // new variables for use in themes
 @cdap-orange:           rgb(255, 102, 0);
+@cdap-header:           rgb(60, 67, 85);
+@cdap-darkness:         rgb(39, 43, 52);
