add cdap searchbar

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -13,6 +13,10 @@ body {
   margin-bottom: 80px;
 }
 
+header.navbar {
+  border-bottom-color: @body-bg;
+}
+
 footer {
   position: absolute;
   bottom: 0;
@@ -30,7 +34,7 @@ footer {
 }
 
 main.container {
-  padding: 60px 15px 0;
+  padding: 100px 15px 0;
 }
 
 #alerts {
