foo kitchen sink

--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -39,8 +39,8 @@ main.container {
 
 #alerts {
   position: fixed;
-  z-index: 99;
-  top: 60px;
+  z-index: 2001;
+  top: 15px;
   left: 0;
   right: 0;
 }
@@ -92,6 +92,10 @@ fieldset.row {
 
 span.text-info[bs-tooltip] {
   cursor: help;
+}
+
+hr {
+  color: @text-color;
 }
 
 .jumbotron {
