--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -1,13 +1,21 @@
 @import "../../bower_components/bootstrap/less/variables.less";
 
-// overrides from above
-@brand-primary:         #428bca;
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+// new variables for use in themes
+@cdap-orange:           rgb(255, 102, 0);
+@cdap-header:           rgb(60, 67, 85);
+@cdap-darkness:         rgb(39, 43, 52);
+
+
+// overrides from default bootstrap
+// @TODO: get sean to customize
+@brand-primary:         rgb(0, 0, 200);
+@brand-success:         rgb(0, 200, 0);
+@brand-info:            rgb(0, 200, 200);
+@brand-warning:         rgb(200, 200, 0);
+@brand-danger:          rgb(200, 0, 0);
 
 @body-bg:               rgb(235, 236, 241);
+@jumbotron-bg:          white;
 
 @text-color:            @gray-dark;
 @link-color:            @brand-primary;
@@ -19,8 +27,3 @@
 @font-size-base:          12px;
 @headings-font-weight:    bold;
 
-
-// new variables for use in themes
-@cdap-orange:           rgb(255, 102, 0);
-@cdap-header:           rgb(60, 67, 85);
-@cdap-darkness:         rgb(39, 43, 52);
