--- a/app/features/applications/templates/list.html
+++ b/app/features/applications/templates/list.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr ng-repeat="app in apps | orderBy:sortable.predicate:sortable.reverse">
       <td >
-        <a ui-sref="apps.application({ namespace: 'ns1', app: app.id})"
+        <a ui-sref="apps.application({ app: app.id })"
            ng-bind="app.name"
             >
         </a>
