--- a/app/styles/themes/cdap.less
+++ b/app/styles/themes/cdap.less
@@ -56,17 +56,17 @@ body.theme-cdap {
       @media (min-width: @screen-sm-min) {
         nav {
           position: absolute;
-          // top: 15px;
+          top: 20px;
           left: 50%;
-          margin-left: -225px;
+          margin-left: -180px;
 
           > ul.nav {
             background-color: @cdap-darkness;
             border-radius: 25px;
-            height: 50px;
+            height: 37px;
 
             li {
-              width: 150px;
+              width: 120px;
               overflow: hidden;
 
               text-align: center;
@@ -75,13 +75,16 @@ body.theme-cdap {
 
               > a {
                 border-radius: 25px;
-                padding: 12px;
-                margin: 5px;
+                padding: 8px;
+                margin: 2px;
+                &:hover {
+                  color: @cdap-orange;
+                }
               }
 
               &.active > a {
                 cursor: default;
-                color: @cdap-darkness;
+                color: @gray-lighter;
                 background-color: @cdap-orange;
               }
             }
