--- a/app/styles/themes/cdap.less
+++ b/app/styles/themes/cdap.less
@@ -10,7 +10,7 @@ body.theme-cdap {
   }
 
   main.container {
-    padding-top: 80px;
+    padding-top: 100px;
 
     @media (max-width: @screen-xs-max) {
       > div { display: none; }
@@ -43,7 +43,7 @@ body.theme-cdap {
       padding-bottom: 15px;
 
       .navbar-brand {
-        > span {
+        > strong {
           display: inline-block;
           visibility: hidden;
           width: 77px;
